# slicot

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  meson.build  meson.options  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: build.yml  codeql.yml  publish.yml  test.yml
benchmarks/: README.md  meson.build
cmake/: BuildOpenBLAS.cmake
docs/: incomplete_translations.md  requirements.txt
docs/api/: index.rst
include/: slicot_blas.h
include/slicot/: mb03.h  sb.h
plugins/control-theory/.claude-plugin/: plugin.json
plugins/control-theory/commands/: control-theory.md
plugins/pid-loop-tuning/.claude-plugin/: plugin.json
plugins/pid-loop-tuning/commands/: pid-loop-tuning.md
plugins/slicot-control/.claude-plugin/: plugin.json
plugins/slicot-control/commands/: slicot-control.md
plugins/slicot-control/skills/slicot-control/: SKILL.md
python/: meson.build
python/data/: docstrings.h  docstrings.json
python/wrappers/: py_ab.c  py_mb03.c  py_mb04.c  py_sb.c  py_tb.c  py_tg.c
scripts/: run_asan_docker.sh
skills/pid-loop-tuning/: SKILL.md
skills/pid-loop-tuning/references/: 01_process_identification.md
skills/slicot-control/: SKILL.md
skills/slicot-control/references/: QUICK_REF.md
slicot-control/: SKILL.md
src/: CMakeLists.txt  meson.build
src/AB/: ab01md.c  ab13dd.c  ab13hd.c
src/MB/: mb03id.c  mb03lp.c  mb03rd.c  mb04hd.c  mb04rs.c
src/SB/: sb02rd.c  sb10pd.c
src/TB/: tb03ay.c
src/TG/: tg01hy.c  tg01od.c
tests/python/: conftest.py  test_ab13dd_n1.py  test_mb04rd.py  test_mb04rt.py  test_mc03md.py  test_sb02rd.py  test_sb10kd.py  test_sb10rd.py  test_sb10td.py
