[build-system]
requires = ["meson-python>=0.16.0", "meson>=1.1.0", "numpy>=2.0"]
build-backend = "mesonpy"

[project]
name = "slicot"
version = "1.0.7"
description = "Python bindings for SLICOT - Subroutine Library in Control Theory"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "SLICOT Contributors" }
]
keywords = ["control", "systems", "linear", "lapack", "blas", "riccati", "lyapunov"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
test = ["pytest", "pytest-xdist", "pytest-rerunfailures", "scipy"]

[project.urls]
Homepage = "https://github.com/jamestjsp/slicot"
Documentation = "https://slicot.readthedocs.io/"
Repository = "https://github.com/jamestjsp/slicot"
Issues = "https://github.com/jamestjsp/slicot/issues"


[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "pp* *-win32 *-manylinux_i686 *-musllinux_i686 *_universal2"
test-requires = ["pytest", "scipy"]
test-command = "pytest {project}/tests/python/test_ab01md.py -v"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
musllinux-x86_64-image = "musllinux_1_2"
musllinux-aarch64-image = "musllinux_1_2"
before-all = "yum install -y meson ninja-build openblas-devel || apk add meson ninja openblas-dev"

[tool.cibuildwheel.macos]
archs = ["arm64"]
before-build = "pip install scipy-openblas32 && mkdir -p /tmp/openblas && python -c \"import scipy_openblas32 as sc; open('/tmp/openblas/openblas.pc','w').write(sc.get_pkg_config())\""
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", PKG_CONFIG_PATH = "/tmp/openblas" }

[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]
before-build = "pip install delvewheel scipy-openblas32 && mkdir C:\\openblas & python -c \"import scipy_openblas32 as sc; open('C:/openblas/openblas.pc','w').write(sc.get_pkg_config())\""
environment = { PKG_CONFIG_PATH = "C:/openblas" }
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
addopts = "-v"

