[build-system]
requires = ["meson-python>=0.16.0", "meson>=1.1.0", "numpy>=2.0"]
build-backend = "mesonpy"

[project]
name = "slicot"
version = "1.0.13"
description = "Python bindings for SLICOT C library (control theory)"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/slicot/slicot.c"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-rerunfailures>=14.0",
]
dev = [
    "scipy>=1.7.0",
    "slycot>=0.6.0",
    "control>=0.10.2",
]

[tool.meson-python.args]
setup = []
compile = []
install = ['--skip-subprojects']

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v -n auto"
